--- a/ex002/index.html
+++ b/ex002/index.html
@@ -8,14 +8,31 @@
 <body>
     <h1>Parágrafos e quebras de linhas</h1>
     <hr>
-    <p>Fazendo
-        paragrafos sem 
-        usar a tag br
+    <p>Você pode
+        escrever um 
+        paragrafo
+        de qualquer jeito.
+        Basta colocar
+        tudo no meio do par de tags &lt; p&gt; e &lt;/p &gt;
     </p>
-    <p>fazendo 
-        paragrafos usando <br> a
-        tag br 
-
+    <p>Se precisar 
+        quebrar o texto
+        em algum 
+        lugar especifico <br>
+        como esse é só utilizar a tag &lt;br&gt;
+    </p>
+    <p>
+        Adicionando símbolos:
+        &copy;
+        &reg;
+        &Delta;
+        &cent;
+    </p>
+    <p>
+        Adicionando emojis:
+        &#x1F3CA
+        &#x1FAE1
+        &#x1F923
     </p>
 </body>
 </html>
