--- a/Primeiro Projeto/imagem.html
+++ b/Primeiro Projeto/imagem.html
@@ -6,6 +6,6 @@
     <title>Meu Projeto</title>
 </head>
 <body>
-    <img src="Imagem/ferrari.jpg" width="700" height="430">
+    <img src="Imagem/" width="700" height="430">
 </body>
 </html>
